<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>gtsam_bender</name>
 <version>0.0.0</version>
 <description>TODO: Package description</description>
 <maintainer email="user@todo.todo">user</maintainer>
 <license>TODO: License declaration</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

    <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>


      <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>




      <build_depend>message_filters</build_depend>
  <exec_depend>message_filters</exec_depend>

    <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

    <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>

        <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>




 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>